# Samples

./: .gitignore  LICENSE.md  README.md  gt.ps1
BCodeSnippetX/: BCodeSnippetX.sln
CallChatGpt/: CallChatGpt.sln
ChargeLimitConfig-DesignPattern1/: ChargeLimitConfig-DesignPattern1.sln
ChatTTS-tool/: demo.py  main.py  read-english-text.py  read.txt  read1.txt  requirements.txt  start.sh  test.py  test1.py
ChatTrainDataWeb/: ChatTrainDataWeb.sln
CheckAssemblyList/: CheckAssemblyList.sln
CloneDatabase/: CloneDatabase.sln
CodeSnippeter/: CodeSnippeter.sln
CsvCli/: CsvCli.sln
gsoft/extract-tool/extract-html/: dev.sh  main.py  pyproject.toml
gsoft/extract-tool/extract-html/extract_html/: app.py  converter.py  extractor.py  file_writer.py  image_downloader.py
gsoft/rust-dk/: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  dev.sh  dk_requirements_specification.md  install.sh
gsoft/rust-dk/src/: commands.rs  docker.rs  main.rs  types.rs  ui.rs
openSource/qmd/finetune/: .gitignore  BALANCED_DISTRIBUTION.md  CLAUDE.md  DATA_IMPROVEMENTS.md  Justfile  Modelfile  README.md  SCORING.md  convert_gguf.py  eval.py  pyproject.toml  reward.py  train.py
openSource/qmd/finetune/configs/: grpo.yaml  sft.yaml  sft_local.yaml
openSource/qmd/finetune/dataset/: analyze_data.py  clean_data.py  generate_balanced.py  generate_data.py  generate_data_offline.py  generate_diverse.py  generate_ollama.py  prepare_data.py  schema.py  score_data.py  validate_schema.py
openSource/qmd/finetune/evals/: .gitignore  queries.txt
openSource/qmd/finetune/gepa/: __init__.py  best_prompt.txt  best_prompt_glm.txt  dspy_gepa.py  example.py  generate.py  gepa_outputs.jsonl  gepa_outputs_glm.jsonl  model.json  optimizer.py  score.py
openSource/qmd/finetune/jobs/: eval.py  eval_common.py  eval_verbose.py  grpo.py  quantize.py  sft.py
(+6000 files in other folders)
