[package]
name = "dk"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A friendly and interactive Docker container management tool"
license = "MIT"
repository = "https://github.com/yourusername/dk"

[[bin]]
name = "dk"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Terminal UI
crossterm = "0.27"
ratatui = "0.24"

# Docker API client
bollard = "0.15"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Utilities
futures = "0.3"