[project]
name = "qmd-finetune"
version = "0.1.0"
description = "QMD query expansion fine-tuning tools"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "trl>=0.12.0",
  "peft>=0.7.0",
  "transformers>=4.45.0",
  "accelerate>=0.24.0",
  "huggingface_hub>=0.20.0",
  "trackio",
  "datasets",
  "pyyaml",
  "gguf",
  "sentencepiece",
  "nvidia-ml-py",
  "dspy-ai>=3.1.2",
]

[dependency-groups]
dev = []
